<package format="3">
  <name>building_ignition_plugins</name>
  <version>1.9999.0</version>
  <description>
    Ignition gazebo plugins for building infrastructure simulation
  </description>
  <author>Luca Della Vedova</author>
  <author>Kevin Ma</author>
  <author>Rushyendra Maganty</author>
  <maintainer email="luca@openrobotics.org">Luca Della Vedova</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- TODO fix dependencies -->
  <depend>rclcpp_rolling</depend>
  <depend>rmf_fleet_msgs_rolling</depend>
  <depend>rmf_door_msgs_rolling</depend>
  <depend>rmf_lift_msgs_rolling</depend>
  <depend>tf2_ros_rolling</depend>
  <depend>geometry_msgs_rolling</depend>
  <depend>std_msgs_rolling</depend>
  <depend>std_srvs_rolling</depend>

  <depend>building_sim_common_rolling</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
